--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + React + Typescript</title>
+    <title>Excalidraw Desktop</title>
   </head>
 
   <body>
